{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 55,
  "lineage": "d1b23525-8af6-c99b-2218-a8134504763a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06392327115e1cbe1",
            "arn": "arn:aws:ec2:us-east-1:135692633042:elastic-ip/eipalloc-06392327115e1cbe1",
            "association_id": "eipassoc-06835c479e2bb2ad4",
            "domain": "vpc",
            "id": "eipalloc-06392327115e1cbe1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02b6540610e15acb8",
            "private_dns": "ip-10-0-101-71.ec2.internal",
            "private_ip": "10.0.101.71",
            "public_dns": "ec2-3-217-239-177.compute-1.amazonaws.com",
            "public_ip": "3.217.239.177",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:internet-gateway/igw-02f59e20cf6fb7f18",
            "id": "igw-02f59e20cf6fb7f18",
            "owner_id": "135692633042",
            "tags": {
              "Name": "cyp2d6-rag-igw"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-igw"
            },
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06392327115e1cbe1",
            "association_id": "eipassoc-06835c479e2bb2ad4",
            "connectivity_type": "public",
            "id": "nat-0a67cd4381663a32c",
            "network_interface_id": "eni-02b6540610e15acb8",
            "private_ip": "10.0.101.71",
            "public_ip": "3.217.239.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad726bd207bb2c2e",
            "tags": {
              "Name": "cyp2d6-rag-nat-gw"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:route-table/rtb-0ba659ed3b7c33f11",
            "id": "rtb-0ba659ed3b7c33f11",
            "owner_id": "135692633042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a67cd4381663a32c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cyp2d6-rag-private-rt"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:route-table/rtb-046b2221aa09f8669",
            "id": "rtb-046b2221aa09f8669",
            "owner_id": "135692633042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f59e20cf6fb7f18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cyp2d6-rag-public-rt"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5bfc38e2965a405",
            "route_table_id": "rtb-0ba659ed3b7c33f11",
            "subnet_id": "subnet-0ead33e2d14fc0fd4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0171c4b8a5411a95f",
            "route_table_id": "rtb-0ba659ed3b7c33f11",
            "subnet_id": "subnet-0e56d40a65c3079b5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0059cfdafbcf61206",
            "route_table_id": "rtb-046b2221aa09f8669",
            "subnet_id": "subnet-0ad726bd207bb2c2e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03370797f0c62a849",
            "route_table_id": "rtb-046b2221aa09f8669",
            "subnet_id": "subnet-051e92afee713f961"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:security-group/sg-0af80a0879a910b52",
            "description": "Security group for App Runner VPC Connector",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af80a0879a910b52",
            "ingress": [],
            "name": "cyp2d6-rag-app-runner-sg",
            "name_prefix": "",
            "owner_id": "135692633042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cyp2d6-rag-app-runner-sg"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-app-runner-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:security-group/sg-0abe06c3031b35a5a",
            "description": "Allow EFS traffic from App Runner",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abe06c3031b35a5a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af80a0879a910b52"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "cyp2d6-rag-efs-sg",
            "name_prefix": "",
            "owner_id": "135692633042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cyp2d6-rag-efs-sg"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_runner",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:subnet/subnet-0ead33e2d14fc0fd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead33e2d14fc0fd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135692633042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cyp2d6-rag-private-subnet-0"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-private-subnet-0"
            },
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:subnet/subnet-0e56d40a65c3079b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e56d40a65c3079b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135692633042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cyp2d6-rag-private-subnet-1"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-private-subnet-1"
            },
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:subnet/subnet-0ad726bd207bb2c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad726bd207bb2c2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135692633042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cyp2d6-rag-public-subnet-0"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-public-subnet-0"
            },
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:subnet/subnet-051e92afee713f961",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051e92afee713f961",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135692633042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cyp2d6-rag-public-subnet-1"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-public-subnet-1"
            },
            "vpc_id": "vpc-0ed1740507f9830b5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135692633042:vpc/vpc-0ed1740507f9830b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c371d3899d2f58af",
            "default_route_table_id": "rtb-0436f35b1af29f9a0",
            "default_security_group_id": "sg-07236c2d1965f2449",
            "dhcp_options_id": "dopt-0a5958be24ebb1c03",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed1740507f9830b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0436f35b1af29f9a0",
            "owner_id": "135692633042",
            "tags": {
              "Name": "cyp2d6-rag-vpc"
            },
            "tags_all": {
              "Name": "cyp2d6-rag-vpc"
            }
          }
        }
      ]
    }
  ]
}